web/public/css/tfm.css
html,
body {
	padding-bottom: 0;
	padding-left: 0;
	padding-right: 0;
}

main {
	position: relative;
	width: 100%;
	height: 100%;
	max-width: 100vw;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
}

.contents-wrapper {
	width: 100%;
	height: 100%;
	justify-content: flex-start;
	align-items: flex-start;
	flex-wrap: wrap;
	overflow-y: scroll;
	overflow-x: hidden;
}

.menu-wrapper {
	display: none;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	padding: 10px;
	background-color: #0008;
}

.menu {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	background-color: #eee;
	box-shadow: 0 0 0.5vw black;
	border-radius: 16px;
	width: 100%;
	height: 100%;
	transition: 0.3s;
	overflow: hidden;
}

form {
	flex: 1 1 auto;
	padding: 2vw 2vw;
	min-height: 0;
}

.list {
	flex: 1 1 auto;
	display: flex;
	flex-direction: row;
	justify-content: flex-start;
	align-content: flex-start;
	align-items: flex-start;
	flex-wrap: wrap;
	padding: 8px 0;
	box-shadow: inset -5px 5px 5px #1111, inset -5px -5px 5px #1111;
	overflow-y: scroll;
	overflow-x: hidden;
}

.sasa {
	position: relative;
	margin: 16px;
	padding: 0;
	width: 160px;
	height: 160px;
	border-radius: 20px;
	background-size: cover;
	background-position: center;
	overflow: hidden;
	cursor: pointer;
}

.sasa .overlay {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background-color: #0000;
}

.sasa:hover .overlay {
	background-color: #0002;
}

.sasa.selected .overlay {
	background-color: #0004;
}

.tanzaku {
	margin: 5px;
	padding: 7px;
	border: 1px solid #555;
	border-radius: 7px;
	cursor: default;
}

.tanzaku:hover,
.tanzaku.selected:hover {
	background-color: #0004;
}

.tanzaku.selected {
	background-color: #0002;
}

